# Poker---Texas-holdem

frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActionButtons.tsx  ActionLog.tsx  HandHistory.tsx  StackControl.tsx
poker-backend/: main.py  pyproject.toml
poker-backend/src/api/: router.py
poker-backend/src/db/: dataclass.py
poker-backend/src/models/: models.py
poker-backend/src/repositories/: poker_repository.py
poker-backend/src/services/: game_state_manager.py
